# xBadge

./: .gitmodules  Anchor.toml  package-lock.json  package.json
programs/badge_staking/: Cargo.toml
programs/badge_staking/src/: error.rs  lib.rs
programs/badge_staking/src/contexts/: create_stake_pool_using_collection_nft.rs  mod.rs  stake_badge_for_authorization.rs  unstake.rs  unstake_badge_for_deauthorization.rs
programs/badge_staking/src/instructions/: create_stake_pool_using_collection_nft.rs  mod.rs  stake_badge_for_authorization.rs  unstake.rs  unstake_badge_for_deauthorization.rs
programs/badge_staking/src/state/: collection_stake_pool_pda_authority_account.rs  mod.rs  stake_account.rs  vault_account.rs
programs/cnft_staking/: Cargo.toml
programs/cnft_staking/src/: lib.rs
programs/cnft_staking/src/contexts/: stake.rs  unstake.rs
programs/cnft_staking/src/instructions/: stake.rs  unstake.rs
programs/cnft_staking/src/state/: stake_account.rs
programs/cnft_staking/src/utils/: bubblegum.rs  mod.rs
programs/x_badge/: Cargo.toml
programs/x_badge/src/: lib.rs
programs/x_badge/src/contexts/: mod.rs  stake_badge_for_authorization.rs
programs/x_badge/src/instructions/: create_stake_pool_using_collection_nft.rs  mod.rs  stake_badge_for_authorization.rs
programs/x_badge/src/state/: cardinal_stake_pool_program.rs
tests/: badge_staking.ts  cnft_staking.ts  x_badge.ts
