[package]
name = "cnft_staking"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "cnft_staking"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = {version ="0.28.0", features = ["init-if-needed"]}
solana-program = "~1.16.8"
mpl-bubblegum = { version = "1.2.0"}
spl-account-compression = { version = "0.2.0",features = ["cpi"] }
